test/admin/language/english/customer/group.php
<?php
// Heading
$_['heading_title']           = 'Customer Group';

// Text
$_['text_success']            = 'Success: You have modified Groups!';
$_['text_group'] 			  = 'Customer Group';
$_['text_status']			  = 'Status';
$_['text_action']			  = 'Action';
$_['text_customers']		  = 'Customers';

// Entry
$_['entry_name']              = 'Group Name:';
$_['entry_status']            = 'Status:';

// error
$_['error_name']              = 'Customer Group Name must be between 3 and 128 characters!';
$_['error_permission']        = 'Warning: You do not have permission to modify Groups!';

// Column
$_['column_name']             = 'Customer Group Name';
$_['column_action']           = 'Action';

// Error
$_['error_default']           = 'Warning: This Customer Group cannot be deleted as it is currently assigned as the default store Customer Group!';
?>